@@ -4,12 +4,12 @@
   <parent>
     <groupId>org.apache</groupId>
     <artifactId>apache</artifactId>
-    <version>16</version>
+    <version>29</version>
   </parent>
 
   <groupId>org.apache.parquet</groupId>
   <artifactId>parquet</artifactId>
-  <version>1.13.0-SNAPSHOT</version>
+  <version>1.14.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Apache Parquet MR</name>
@@ -59,71 +59,81 @@
     </repository>
   </repositories>
 
-  <developers>
-    <developer>
-      <name>Julien Le Dem</name>
-      <email>julien@twitter.com</email>
-    </developer>
-  </developers>
-
   <properties>
-    <targetJavaVersion>1.8</targetJavaVersion>
     <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>${targetJavaVersion}</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <github.global.server>github</github.global.server>
-    <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
     <jackson.groupId>com.fasterxml.jackson.core</jackson.groupId>
+    <jackson.datatype.groupId>com.fasterxml.jackson.datatype</jackson.datatype.groupId>
     <jackson.package>com.fasterxml.jackson</jackson.package>
-    <jackson.version>2.12.2</jackson.version>
-    <jackson-databind.version>${jackson.version}</jackson-databind.version>
-    <japicmp.version>0.14.2</japicmp.version>
+    <jackson.version>2.15.2</jackson.version>
+    <jackson-databind.version>2.15.2</jackson-databind.version>
+    <japicmp.version>0.18.1</japicmp.version>
     <shade.prefix>shaded.parquet</shade.prefix>
-    <hadoop.version>2.10.1</hadoop.version>
-    <cascading.version>2.7.1</cascading.version>
-    <cascading3.version>3.1.2</cascading3.version>
-    <parquet.format.version>2.8.0</parquet.format.version>
-    <previous.version>1.12.0</previous.version>
+    <hadoop.version>3.3.5</hadoop.version>
+    <parquet.format.version>2.9.0</parquet.format.version>
+    <previous.version>1.13.0</previous.version>
     <thrift.executable>thrift</thrift.executable>
     <format.thrift.executable>${thrift.executable}</format.thrift.executable>
-    <scala.version>2.12.8</scala.version>
+    <scala.version>2.12.17</scala.version>
     <!-- scala.binary.version is used for projects that fetch dependencies that are in scala -->
     <scala.binary.version>2.12</scala.binary.version>
     <scala.maven.test.skip>false</scala.maven.test.skip>
-    <scrooge.verion>19.10.0</scrooge.verion>
     <pig.version>0.16.0</pig.version>
     <pig.classifier>h2</pig.classifier>
     <thrift-maven-plugin.version>0.10.0</thrift-maven-plugin.version>
-    <thrift.version>0.14.1</thrift.version>
+    <thrift.version>0.16.0</thrift.version>
     <format.thrift.version>${thrift.version}</format.thrift.version>
-    <fastutil.version>8.4.2</fastutil.version>
+    <fastutil.version>8.5.12</fastutil.version>
     <semver.api.version>0.9.33</semver.api.version>
-    <slf4j.version>1.7.22</slf4j.version>
-    <avro.version>1.10.2</avro.version>
-    <guava.version>27.0.1-jre</guava.version>
+    <slf4j.version>1.7.33</slf4j.version>
+    <avro.version>1.11.3</avro.version>
+    <guava.version>31.1-jre</guava.version>
     <brotli-codec.version>0.1.1</brotli-codec.version>
     <mockito.version>1.10.19</mockito.version>
-    <net.openhft.version>0.9</net.openhft.version>
-    <maven-javadoc-plugin.version>3.1.0</maven-javadoc-plugin.version>
+    <powermock.version>2.0.9</powermock.version>
+    <net.openhft.version>0.16</net.openhft.version>
     <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
+    <yetus.audience-annotations.version>0.13.0</yetus.audience-annotations.version>
 
     <!-- parquet-cli dependencies -->
     <opencsv.version>2.3</opencsv.version>
-    <jcommander.version>1.72</jcommander.version>
-    <zstd-jni.version>1.4.9-1</zstd-jni.version>
+    <jcommander.version>1.82</jcommander.version>
+    <tukaani.version>1.9</tukaani.version>
+    <zstd-jni.version>1.5.0-1</zstd-jni.version>
     <commons-text.version>1.8</commons-text.version>
+    <jsr305.version>3.0.2</jsr305.version>
+    <commons-lang3.version>3.12.0</commons-lang3.version>
 
     <!-- properties for the profiles -->
-    <surefire.argLine>-Xmx512m</surefire.argLine>
+    <surefire.argLine> </surefire.argLine>
     <surefire.logLevel>INFO</surefire.logLevel>
+
+    <!-- Resource intesive tests are enabled by default but disabled in the CI envrionment -->
+    <enableResourceIntensiveTests>true</enableResourceIntensiveTests>
+
+    <extraJavaTestArgs>
+      -XX:+IgnoreUnrecognizedVMOptions
+      --add-opens=java.base/java.lang=ALL-UNNAMED
+      --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+      --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+      --add-opens=java.base/java.io=ALL-UNNAMED
+      --add-opens=java.base/java.net=ALL-UNNAMED
+      --add-opens=java.base/java.nio=ALL-UNNAMED
+      --add-opens=java.base/java.util=ALL-UNNAMED
+      --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+      --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+      --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+      --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+      --add-opens=java.base/sun.security.action=ALL-UNNAMED
+      --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+    </extraJavaTestArgs>
   </properties>
 
   <modules>
     <module>parquet-arrow</module>
     <module>parquet-avro</module>
     <module>parquet-benchmarks</module>
-    <module>parquet-cascading-deprecated</module>
-    <module>parquet-cascading3-deprecated</module>
     <module>parquet-cli</module>
     <module>parquet-column</module>
     <module>parquet-common</module>
@@ -136,10 +146,8 @@
     <module>parquet-pig-bundle</module>
     <module>parquet-protobuf</module>
     <module>parquet-scala</module>
-    <module>parquet-scrooge-deprecated</module>
     <module>parquet-thrift</module>
     <module>parquet-hadoop-bundle</module>
-    <module>parquet-tools-deprecated</module>
   </modules>
 
   <dependencies>
@@ -152,17 +160,66 @@
     <dependency>
       <groupId>org.easymock</groupId>
       <artifactId>easymock</artifactId>
-      <version>3.4</version>
+      <version>5.1.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-mapreduce-client-core</artifactId>
+        <version>${hadoop.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>ch.qos.reload4j</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-client</artifactId>
+        <version>${hadoop.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>ch.qos.reload4j</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-common</artifactId>
+        <version>${hadoop.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>ch.qos.reload4j</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <reporting>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>${maven-javadoc-plugin.version}</version>
         <reportSets>
           <reportSet><!-- by default, id = "default" -->
             <reports><!-- select non-aggregate reports -->
@@ -189,7 +246,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
-        <version>2.5.2</version>
+        <version>2.7</version>
         <configuration>
           <formats>
             <format>html</format>
@@ -225,14 +282,7 @@
         </plugin>
 
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>2.7</version>
-        </plugin>
-
-        <plugin>
           <artifactId>maven-enforcer-plugin</artifactId>
-          <version>1.3.1</version>
          <executions>
            <execution>
             <id>enforce-banned-dependencies</id>
@@ -243,7 +293,8 @@
               <rules>
                 <bannedDependencies>
                   <excludes>
-                    <exclude>org.slf4j:slf4j-log4j12</exclude>
+                    <exclude>org.slf4j:slf4j-log4j12:*:*:compile</exclude>
+                    <exclude>org.slf4j:slf4j-reload4j:*:*:compile</exclude>
                   </excludes>
                 </bannedDependencies>
               </rules>
@@ -255,7 +306,6 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
-          <version>3.2.1</version>
           <executions>
             <execution>
               <phase>package</phase>
@@ -301,7 +351,6 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>${maven-jar-plugin.version}</version>
           <configuration>
             <archive>
               <manifestEntries>
@@ -323,7 +372,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>${maven-javadoc-plugin.version}</version>
         <configuration>
           <sourceFileExcludes>
             <sourceFileExclude>**/generated-sources/**/*.java</sourceFileExclude>
@@ -352,14 +400,7 @@
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>2.7</version>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-remote-resources-plugin</artifactId>
-          <version>1.5</version>
           <configuration>
             <skip>true</skip>
           </configuration>
@@ -369,7 +410,6 @@
         <!-- Override source and target from the ASF parent -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
         <configuration>
           <argLine>-XX:MaxPermSize=256m</argLine>
           <source>${maven.compiler.source}</source>
@@ -380,7 +420,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.10</version>
+        <configuration>
+          <argLine>${extraJavaTestArgs}</argLine>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -394,9 +436,8 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.10</version>
         <configuration>
-          <argLine>${surefire.argLine}</argLine>
+          <argLine>${surefire.argLine} ${extraJavaTestArgs}</argLine>
           <systemPropertyVariables>
             <!-- Configure Parquet logging during tests
                  See http://www.slf4j.org/api/org/slf4j/impl/SimpleLogger.html
@@ -409,6 +450,7 @@
 
             <!-- Configure log level for Hadoop -->
             <hadoop.logLevel>${surefire.logLevel}</hadoop.logLevel>
+            <enableResourceIntensiveTests>${enableResourceIntensiveTests}</enableResourceIntensiveTests>
           </systemPropertyVariables>
           <excludes>
             <exclude>**/benchmark/*.java</exclude>
@@ -419,7 +461,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>buildnumber-maven-plugin</artifactId>
-        <version>1.1</version>
+        <version>3.1.0</version>
         <executions>
           <execution>
             <phase>validate</phase>
@@ -433,7 +475,6 @@
       <plugin>
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
-        <version>0.12</version>
         <executions>
           <execution>
             <phase>test</phase>
@@ -449,7 +490,6 @@
             <exclude>**/*.parquet</exclude>
             <exclude>**/*.avro</exclude>
             <exclude>**/*.json</exclude>
-            <exclude>**/names.txt</exclude> <!-- parquet-cascading test data -->
             <exclude>**/*.avsc</exclude>
             <exclude>**/*.iml</exclude>
             <exclude>**/*.log</exclude>
@@ -482,16 +522,10 @@
             <oldVersionPattern>${previous.version}</oldVersionPattern>
             <breakBuildOnSourceIncompatibleModifications>true</breakBuildOnSourceIncompatibleModifications>
             <onlyModified>true</onlyModified>
-            <overrideCompatibilityChangeParameters>
-              <!-- Adding a new method with default implementation to an interface should be a compatible change.
-                That's why they invented it. -->
-              <overrideCompatibilityChangeParameter>
-                <compatibilityChange>METHOD_NEW_DEFAULT</compatibilityChange>
-                <semanticVersionLevel>MINOR</semanticVersionLevel>
-                <binaryCompatible>true</binaryCompatible>
-                <sourceCompatible>true</sourceCompatible>
-              </overrideCompatibilityChangeParameter>
-            </overrideCompatibilityChangeParameters>
+            <ignoreMissingClassesByRegularExpressions>
+              <ignoreMissingClassesByRegularExpression>${shade.prefix}.*</ignoreMissingClassesByRegularExpression>
+            </ignoreMissingClassesByRegularExpressions>
+            <ignoreMissingOldVersion>true</ignoreMissingOldVersion>
             <excludeModules>
               <!-- Excluding the following modules because they are not part of the parquet public API -->
               <excludeModule>parquet-benchmarks</excludeModule>
@@ -506,6 +540,12 @@
             </excludeModules>
             <excludes>
               <exclude>${shade.prefix}</exclude>
+              <exclude>org.apache.parquet.thrift.projection.deprecated.PathGlobPattern</exclude>
+              <!-- japicmp is overly aggressive on interface types in signatures, a type was changed to a supertype but this still triggers it -->
+              <exclude>org.apache.parquet.hadoop.ColumnChunkPageWriteStore</exclude>
+              <exclude>org.apache.parquet.hadoop.ParquetRecordWriter</exclude>
+              <exclude>org.apache.parquet.proto.ProtoParquetReader#builder(org.apache.hadoop.fs.Path,boolean)</exclude>
+              <exclude>org.apache.parquet.proto.ProtoParquetReader#builder(org.apache.parquet.io.InputFile,boolean)</exclude>
             </excludes>
           </parameter>
         </configuration>
@@ -518,10 +558,45 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>analyze-only</goal>
+            </goals>
+            <configuration>
+              <failOnWarning>true</failOnWarning>
+              <ignoreNonCompile>true</ignoreNonCompile>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.cyclonedx</groupId>
+        <artifactId>cyclonedx-maven-plugin</artifactId>
+        <version>2.7.9</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>makeBom</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
   <profiles>
+    <profile>
+      <id>hadoop2</id>
+      <properties>
+        <hadoop.version>2.7.3</hadoop.version>
+      </properties>
+    </profile>
+
     <profile>
       <id>update-github-site</id>
       <reporting>
@@ -529,7 +604,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-project-info-reports-plugin</artifactId>
-            <version>2.7</version>
             <reportSets>
               <reportSet>
                 <reports>
@@ -558,7 +632,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-site-plugin</artifactId>
-            <version>3.3</version>
             <configuration>
               <skipDeploy>true</skipDeploy>
             </configuration>
@@ -566,7 +639,7 @@
           <plugin>
             <groupId>com.github.github</groupId>
             <artifactId>site-maven-plugin</artifactId>
-            <version>0.8</version>
+            <version>0.12</version>
             <configuration>
               <message>Creating site for ${project.version}</message>
               <path>${project.distributionManagement.site.url}</path>
@@ -591,7 +664,8 @@
       <id>ci-test</id>
       <properties>
         <surefire.logLevel>WARN</surefire.logLevel>
-        <surefire.argLine>-Xmx512m -XX:MaxJavaStackTraceDepth=10</surefire.argLine>
+        <surefire.argLine>-XX:MaxJavaStackTraceDepth=10</surefire.argLine>
+        <enableResourceIntensiveTests>false</enableResourceIntensiveTests>
       </properties>
     </profile>
 
@@ -605,12 +679,17 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <release>8</release>
-            </configuration>
           </plugin>
         </plugins>
       </build>
+    </profile>
+
+    <profile>
+      <id>vector-plugins</id>
+      <modules>
+        <module>parquet-plugins/parquet-encoding-vector</module>
+        <module>parquet-plugins/parquet-plugins-benchmarks</module>
+      </modules>
     </profile>
   </profiles>
 </project>
